glass: Widget component
The widget component replaces the abstract widget class and provides a
template to be used. This way the widget components can set their widget
title. Now all widget also show a loading bar and the disconnect status
if something has gone wrong. Soon each widget can have it's own actions.

Signed-off-by: Stephan Müller <smueller@suse.com>

--- a/src/glass/src/app/core/dashboard/widgets/capacity-dashboard-widget/capacity-dashboard-widget.component.html
+++ b/src/glass/src/app/core/dashboard/widgets/capacity-dashboard-widget/capacity-dashboard-widget.component.html
@@ -1,16 +1,15 @@
-<div class="glass-capacity-dashboard-widget"
-     [ngClass]="{'error': error}"
-     fxLayout="row"
-     fxLayoutAlign="center center">
-  <ng-container *ngIf="!error">
+<glass-widget [loadData]="loadData.bind(this)"
+              title="Capacity"
+              (loadDataEvent)="updateChartData($event)">
+  <div class="glass-capacity-dashboard-widget"
+       fxLayout="row"
+       fxLayoutAlign="start start">
     <ngx-charts-advanced-pie-chart [scheme]="colorScheme"
                                    [results]="chartData"
                                    [animations]="false"
+                                   [view]="[500,175]"
                                    [tooltipDisabled]="true"
                                    [valueFormatting]="valueFormatting.bind(this)">
     </ngx-charts-advanced-pie-chart>
-  </ng-container>
-  <mat-icon *ngIf="error"
-            svgIcon="mdi:lan-disconnect">
-  </mat-icon>
-</div>
+  </div>
+</glass-widget>
