--- a/src/glass/src/app/core/top-bar/top-bar.component.html
+++ b/src/glass/src/app/core/top-bar/top-bar.component.html
@@ -4,6 +4,7 @@
           (click)="onToggleNavigationBar()">
     <mat-icon svgIcon="mdi:menu"></mat-icon>
   </button>
+  <glass-breadcrumbs></glass-breadcrumbs>
   <span fxFlex></span>
   <glass-language-button></glass-language-button>
 </mat-toolbar>
